modif page contact

--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
   <div class="container1">
     <h1>Vous êtes intéressé par un tableau ?</h1>
     <div class="container">
-      <div class="container">
+      <div class="main">
         <ul>
           <li>
             <i class="fas fa-envelope"></i>
@@ -59,21 +59,22 @@
               christine peintre</a>
           </li>
         </ul>
-      </div>
-      <div class="formulaire">
-        <form action="https://formsubmit.co/duquesne.peintre@gmail.com" method="POST">
-          <input type="hidden" name="_subject" value="Nouveau mail!">
-          <label for="name">NOM:</label>
-          <input type="text" name="name" id="name" required>
-          <label for="email">Email:</label>
-          <input type="email" name="email" id="email" required>
-          <input type="hidden" name="_next" value="https://duquesne-artiste-peintre.netlify.app/index.html">
-          <label for="subject">Sujet:</label>
-          <input type="text" name="subject" id="subject" required>
-          <label for="message">Message</label>
-          <textarea name="message" cols="20" rows="5"></textarea>
-          <input type="submit" value="submit" class="btn">
-        </form>
+
+        <div class="formulaire">
+          <form action="https://formsubmit.co/duquesne.peintre@gmail.com" method="POST">
+            <input type="hidden" name="_subject" value="Nouveau mail!">
+            <label for="name">NOM:</label>
+            <input type="text" name="name" id="name" required>
+            <label for="email">Email:</label>
+            <input type="email" name="email" id="email" required>
+            <input type="hidden" name="_next" value="https://duquesne-artiste-peintre.netlify.app/index.html">
+            <label for="subject">Sujet:</label>
+            <input type="text" name="subject" id="subject" required>
+            <label for="message">Message</label>
+            <textarea name="message" cols="20" rows="5"></textarea>
+            <input type="submit" value="Envoyez" class="btn">
+          </form>
+        </div>
       </div>
     </div>
   </div>
@@ -88,7 +89,7 @@
         <li class="list-inline-item"><a href="actu.html">Actu</a></li>
         <li class="list-inline-item"><a href="contact.html">Contact</a></li>
       </ul>
-      <p class="copyright">Copyright 2023 Christine Dusquesne - <a
+      <p class="copyright">Copyright 2023 Christine Duquesne - <a
           href="mailto:duquesne.peintre@gmail.com">duquesne.peintre@gmail.com</a> </p>
     </footer>
   </div>
