--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
   </nav>
   <h1>Christine DUQUESNE <br> Artiste Peintre Contemporain</h1>
   <h2>Des tableaux qui personnalisent votre intérieur</h2>
-  <div class="about"><p>Bienvenue ! 
-    Des œuvres résolument modernes n’attendent que vous.
-    Offrez-vous une nouvelle décoration grâce à une pièce unique qui vous ressemble.
+  <div class="about-A">
+    <p>Bienvenue !<br>
+      Des œuvres résolument modernes n’attendent que vous.<br>
+      Offrez-vous une nouvelle décoration grâce à une pièce unique qui vous ressemble.<br>
     </p>
   </div>
   <section class="paint">
@@ -100,7 +101,8 @@
         <img src="assets/image/Baby guitare.jpg" class="acceuil-img" alt="une belle petite guitare">
       </div>
       <div class="card-acceuil" style="width: 18rem;">
-        <img src="assets/image/Ouvrir l'oeil.jpg" class="acceuil-img" alt="Un œil géant dans lequel se reflète une civilisation perdue. L’univers observe.">
+        <img src="assets/image/Ouvrir l'oeil.jpg" class="acceuil-img"
+          alt="Un œil géant dans lequel se reflète une civilisation perdue. L’univers observe.">
       </div>
       <div class="card-acceuil" style="width: 18rem;">
         <img src="assets/image/Non mais dites!.jpg" class="acceuil-img" alt="Méditez. Avec ou sans malice. Vous pourriez déceler quelques 
@@ -110,8 +112,9 @@
   </section>
   <div class="footer-basic">
     <footer>
-      <div class="social"><a href="https://instagram.com/duquesne_christine_peintre?igshid=YmMyMTA2M2Y="><i class="icon ion-social-instagram"></i></a><a
-          href="https://www.facebook.com/DUQUESNEARTISTEPEINTRE"><i class="icon ion-social-facebook"></i></a></div>
+      <div class="social"><a href="https://instagram.com/duquesne_christine_peintre?igshid=YmMyMTA2M2Y="><i
+            class="icon ion-social-instagram"></i></a><a href="https://www.facebook.com/DUQUESNEARTISTEPEINTRE"><i
+            class="icon ion-social-facebook"></i></a></div>
       <ul class="list-inline">
         <li class="list-inline-item"><a href="index.html">Accueil</a></li>
         <li class="list-inline-item"><a href="painting.html">Œuvres originales</a></li>
