--- a/painting.html
+++ b/painting.html
@@ -47,7 +47,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/L'ARCHE DE NOAH.png" class="card-img-top" alt="...">
+      <img src="assets/image/L'ARCHE DE NOAH.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">L'arche de Noah</h5>
         <p class="card-price">VENDU</p>
@@ -75,7 +75,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/DOS DE MER.png" class="card-img-top" alt="...">
+      <img src="assets/image/DOS DE MER.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Dos de mer</h5>
         <p class="card-price">VENDU</p>
@@ -103,7 +103,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/L'ORIGINE.png" class="card-img-top" alt="...">
+      <img src="assets/image/L'ORIGINE.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">L'origine</h5>
         <p class="card-price">VENDU</p>
@@ -130,7 +130,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/FRUITS.png" class="card-img-top" alt="...">
+      <img src="assets/image/FRUITS.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Fruits</h5>
         <p class="card-price">VENDU</p>
