--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="none" />
   <meta name="google-site-verification" content="tZyelEbdqpfPlLJGMj9auUxOy6yVf-srBNDbcGdUOJ8" />
   <title>Décorez votre interieur avec des tableaux modernes, originaux & peints a la main</title>
   <meta name="description" content="Découvrez une sélection exceptionnelle de tableaux peints à la main par un artiste talentueux. 
