modification de certain text

--- a/actu.html
+++ b/actu.html
@@ -34,7 +34,7 @@
       </div>
     </div>
   </nav>
-  <h1>Exposition</h1>
+  <h1>L'exposition se tiendra au NOUVEL ATELIER du 02 mars au 30 avril 2023</h1>
   <div class="container center">
     <embed src="assets/pdf/FLYER EXPO BOCAGE.pdf" width="450px" height="680px">
   </div>
