--- a/index.html
+++ b/index.html
@@ -5,14 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="none" />
-  <meta name="google-site-verification" content="tZyelEbdqpfPlLJGMj9auUxOy6yVf-srBNDbcGdUOJ8" />
-  <title>Décorez votre interieur avec des tableaux modernes, originaux & peints a la main</title>
-  <meta name="description" content="Découvrez une sélection exceptionnelle de tableaux peints à la main par un artiste talentueux. 
-    Nos tableaux originaux apporteront une touche d'élégance et de personnalité à votre intérieur.
-    Livraison rapide et satisfaction garantie. Ce site met en avant la qualité des tableaux proposés sur le site,
-    ainsi la rapidité de la livraison. Elle incite le visiteur à découvrir les tableaux exclusifs du site pour ajouter une touche d'élégance
-    et de personnalité à leur intérieur">
+  <title>tableau</title>
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -45,20 +38,20 @@
   <h2>Des tableaux qui personnalisent votre intérieur</h2>
   <div class="about-A">
     <p>Bienvenue !<br>
-      Des œuvres résolument modernes n’attendent que vous.<br>
       Offrez-vous une nouvelle décoration grâce à une pièce unique qui vous ressemble.<br>
+      Des œuvres résolument modernes n’attendent que vous.<br>
     </p>
   </div>
   <section class="paint">
   </section>
-  <h2>Bienvenue</h2>
+  <h2>Tableaux d'art colorés. Les tons chauds et chatoyants : la patte de l'artiste</h2>
   <div class="container">
     <section class="about">
       <div class="main">
         <img src="../assets/image/profile C-D.jpg" alt="Voici une photo de l'artiste peintre christine Duquesne.">
         <div class="about-text">
           <p>Christine DUQUESNE est artiste peintre autodidacte.<br>
-            À travers sa peinture transparait ses thèmes de prédilection tels que la NATURE,
+            À travers sa peinture transparaissent ses thèmes de prédilection tels que la NATURE,
             et la place que l’HOMME y occupe.</p>
         </div>
       </div>
@@ -87,8 +80,6 @@
         Peinture Acrylique.<br>
         Les tableaux ne sont pas encadrés.<br>
         Nous répondons à toutes vos questions.</p>
-
-      <p>Bonne visite.</p>
     </div>
   </div>
   <section>
