--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
           </li>
           <li>
             <i class="fa-solid fa-mobile-screen-button"></i>
-            <a href="tel:+33610488231" class="contact">+336 10 48 82 31</a>
+            <a href="tel:+33610488231" class="contact">+33 6 10 48 82 31</a>
           </li>
           <li>
             <i class="fa-brands fa-facebook"></i>
@@ -55,8 +55,8 @@
           </li>
           <li>
             <i class="fa-brands fa-instagram"></i>
-            <a href="https://instagram.com/duquesne_christine_peintre?igshid=YmMyMTA2M2Y=" class="contact">duquesne
-              christine peintre</a>
+            <a href="https://instagram.com/duquesne_christine_peintre?igshid=YmMyMTA2M2Y=" class="contact">duquesne_
+              christine_peintre</a>
           </li>
         </ul>
 
@@ -72,7 +72,7 @@
             <input type="text" name="subject" id="subject" required>
             <label for="message">Message</label>
             <textarea name="message" cols="20" rows="5"></textarea>
-            <input type="submit" value="Envoyez" class="btn">
+            <input type="submit" value="Envoi" class="btn">
           </form>
         </div>
       </div>
