correction version mobile

--- a/actu.html
+++ b/actu.html
@@ -36,7 +36,7 @@
   </nav>
   <h1>L'exposition se tiendra au NOUVEL ATELIER du 02 mars au 30 avril 2023</h1>
   <div class="container center">
-    <embed src="assets/pdf/FLYER EXPO BOCAGE.pdf" width="450px" height="680px">
+    <embed src="assets/pdf/VERNISSAGE.pdf" width="450px" height="680px">
   </div>
 
   <div class="footer-basic">
