correction page acceuil

--- a/index.html
+++ b/index.html
@@ -44,14 +44,13 @@
   <h1>Christine DUQUESNE <br> Artiste Peintre Contemporain</h1>
   <h2>Des tableaux qui personnalisent votre intérieur</h2>
   <div class="about-A">
-    <p>Bienvenue !<br>
       Offrez-vous une nouvelle décoration grâce à une pièce unique qui vous ressemble.<br>
       Des œuvres résolument modernes n’attendent que vous.<br>
     </p>
   </div>
   <section class="paint">
   </section>
-  <h2>Tableaux d'art colorés. Les tons chauds et chatoyants : la patte de l'artiste</h2>
+  <h2>Tableaux d'art colorés.<br> Les tons chauds et chatoyants : la patte de l'artiste.</h2>
   <div class="container">
     <section class="about">
       <div class="main">
